[package]
name = "bobby"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A minimal web framework."
keywords = ["api", "http", "framework", "rest"]
categories = ["web-programming"]
homepage = "https://github.com/askonomm/bobby"
repository = "https://github.com/askonomm/bobby"
readme = "README.md"

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
